# pylabeador

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.markdown  README.base.md  README.es.md  README.markdown  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  pythonpackage.yml  release.yml  test.yml
src/pylabeador/: __init__.py  __main__.py  __version__.py  api.py  engine.py  errors.py  models.py  pylabeador.py  syllabify.py  util.py
test/: spanish-hyphens.txt  spanish-hyphens2.txt  test_api.py  test_bits.py  test_cli.py  test_hyphenation_and_stress.py  test_hyphenation_common_words.py  test_hyphenator.py  test_internals.py  test_spanish_validation.py  test_wordprogress.py  test_y_handling.py  utils.py
tools/: gen-report.py  hyphenfile.py
