[metadata]
name = pylabeador
description = Automatic syllabification for Spanish words
version = attr:pylabeador.VERSION
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    =src
packages = find:

[options.entry_points]
console_scripts=
    pylabeador = pylabeador.__main__:entrypoint

[options.packages.find]
where = src

