[metadata]
name = pylabeador
description = Automatic syllabification for Spanish words
long_description = file:README.markdown
author = Jacobo de Vera
author_email = devel@jacobodevera.com
license = GPL-3.0-or-later
license_file = COPYING
version = attr:pylabeador.VERSION
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Natural Language :: Spanish


[options]
package_dir =
    =src
packages = find:

[options.entry_points]
console_scripts=
    pylabeador = pylabeador.__main__:entrypoint

[options.packages.find]
where = src

